--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -273,3 +273,12 @@ h2 {
     margin-top: auto;  
     width: 100%;
 }
+.game-card {
+    display: flex;
+    flex-direction: column;
+}
+
+.show-btn {
+    margin-top: auto;   /* ĐẨY nút xuống đáy card */
+}
+
