--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -277,3 +277,56 @@ body {
     color: #000;
 }
 
+/* BADGE */
+.badge-wrap {
+    margin-top: 6px;
+    display: flex;
+    flex-direction: column;
+    gap: 4px;
+}
+
+.badge-sale {
+    background: linear-gradient(90deg, #ff006a, #ff3c00);
+    padding: 4px 8px;
+    border-radius: 6px;
+    font-size: 12px;
+    font-weight: bold;
+    width: fit-content;
+    color: white;
+}
+
+.badge-update {
+    background: linear-gradient(90deg, #00eaff, #0077ff);
+    padding: 4px 8px;
+    border-radius: 6px;
+    font-size: 12px;
+    font-weight: bold;
+    width: fit-content;
+    color: white;
+}
+
+/* PAGINATION */
+#pagination {
+    margin-top: 30px;
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+}
+
+.page-btn {
+    padding: 10px 18px;
+    background: #0f1a24;
+    border: 1px solid #00eaff;
+    border-radius: 6px;
+    color: #00eaff;
+    cursor: pointer;
+    font-weight: bold;
+    transition: 0.25s;
+}
+
+.page-btn:hover,
+.page-btn.active {
+    background: #00eaff;
+    color: #000;
+}
+
