--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,10 +29,14 @@ body {
         HERO SECTION
 ============================ */
 .hero-section {
-    padding-top: 5px !important;
-    padding-bottom: 10px !important;
-    margin-bottom: 0 !important;
+    text-align: center;
+    padding: 20px 0 !important;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
+
 
 
 .hero-section.compact {
@@ -425,4 +429,76 @@ body {
         grid-template-columns: 1fr;
     }
 }
+.price-plans {
+    margin-top: 40px;
+    padding: 20px 0;
+    text-align: center;
+}
+
+.price-title {
+    font-size: 32px;
+    color: #00eaff;
+    text-shadow: 0 0 10px #00eaff;
+    margin-bottom: 20px;
+}
+
+.price-grid-3 {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 25px;
+    width: 90%;
+    margin: auto;
+}
+
+.price-card {
+    background: #0b1118;
+    padding: 25px;
+    border-radius: 14px;
+    box-shadow: 0 0 12px #000;
+    text-align: center;
+}
+
+.price-card h3 {
+    margin-bottom: 10px;
+}
+
+.price-value {
+    font-size: 26px;
+    font-weight: bold;
+    margin-bottom: 15px;
+    color: #00eaff;
+}
+
+.price-card ul {
+    list-style: none;
+    padding: 0;
+}
+
+.price-card ul li {
+    margin: 6px 0;
+    font-size: 14px;
+}
+
+.price-card .disable {
+    opacity: .4;
+}
+
+.price-card.popular {
+    border: 2px solid #00eaff;
+    box-shadow: 0 0 15px #00eaffaa;
+    position: relative;
+}
+
+.tag-popular {
+    background: #00eaff;
+    color: #000;
+    padding: 4px 16px;
+    border-radius: 20px;
+    font-size: 12px;
+    position: absolute;
+    top: -12px;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
 
